Issue #3144 - minor fixes Changes in this PR: - partial fix for copy link modal - fixed show password checkbox - added padding for accordion in themed guidance - removed round edges for modals

--- a/app/assets/stylesheets/blocks/_modal_dialogs.scss
+++ b/app/assets/stylesheets/blocks/_modal_dialogs.scss
@@ -1,6 +1,10 @@
 @use '../variables/colours' as *;
 // Overrides Bootstrap 3.0's Modals
 
+.modal{
+  --bs-modal-border-radius: 0rem;
+}
+
 .modal-dialog {
   background-color: $color-secondary-background;
 }
