Enable translations for browser tab titles

--- a/app/views/contributors/edit.html.erb
+++ b/app/views/contributors/edit.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize("#{@plan.title} - edit contributor") %>
+<% title sanitize(_("%{plan_title} - edit contributor") % {plan_title: @plan.title}) %>
 
 <div class="row">
   <div class="col-md-12">
