--- a/app/views/phases/edit.html.erb
+++ b/app/views/phases/edit.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize("#{plan.title} - Write plan") %>
+<% title sanitize(_("%{plan_title} - Write plan") % {plan_title: plan.title}) %>
 <div class="row">
   <div class="col-md-12">
     <h1><%= sanitize(plan.title) %></h1>
