--- a/app/views/research_outputs/index.html.erb
+++ b/app/views/research_outputs/index.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize("#{@plan.title} - research outputs") %>
+<% title sanitize(_("%{plan_title} - research outputs") % {plan_title: @plan.title}) %>
 
 <div class="row">
   <div class="col-md-12">
