--- a/app/views/research_outputs/new.html.erb
+++ b/app/views/research_outputs/new.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize("#{@plan.title} - add research output") %>
+<% title sanitize(_("%{plan_title} - add research output") % {plan_title: @plan.title}) %>
 
 <div class="row">
   <div class="col-md-12">
