--- a/app/views/contributors/index.html.erb
+++ b/app/views/contributors/index.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize("#{@plan.title} - contributors") %>
+<% title sanitize(_("%{plan_title} - contributors") % {plan_title: @plan.title}) %>
 
 <div class="row">
   <div class="col-md-12">
