--- a/app/views/contributors/new.html.erb
+++ b/app/views/contributors/new.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize("#{@plan.title} - add contributor") %>
+<% title sanitize(_("%{plan_title} - add contributor") % {plan_title: @plan.title}) %>
 
 <div class="row">
   <div class="col-md-12">
