--- a/app/views/plans/download.html.erb
+++ b/app/views/plans/download.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize("#{@plan.title} - Download") %>
+<% title sanitize(_("%{plan_title} - Download") % {plan_title: @plan.title}) %>
 <div class="row">
   <div class="col-md-12">
     <!-- render the project title -->
