--- a/app/views/plans/request_feedback.html.erb
+++ b/app/views/plans/request_feedback.html.erb
@@ -1,4 +1,4 @@
-<% title sanitize(_("#{@plan.title} - Request feedback")) %>
+<% title sanitize(_("%{plan_title} - Request feedback") % {plan_title: @plan.title}) %>
 <div class="row">
   <div class="col-md-12">
     <!-- render the project title -->
