--- a/app/views/branded/contributors/index.html.erb
+++ b/app/views/branded/contributors/index.html.erb
@@ -16,7 +16,7 @@
     <% end %>
     <div class="col-md-12 madmp-fragment">
       <dmp-contributors-tab props-json='{
-        "locale": "<%= locale %>",
+        "locale": "<%= LocaleService.to_gettext(locale: locale) %>",
         "planId": "<%= @plan.id %>",
         "readonly": <%= !@plan.editable_by?(current_user.id) %>
       }'/>
