chore: CSS improvements on plan main content

--- a/app/views/branded/plans/_navigation.html.erb
+++ b/app/views/branded/plans/_navigation.html.erb
@@ -97,7 +97,7 @@
       </h1>
     </div>
   </div>
-  <div id="content" role="tabpanel" class="tab-pane active">
+  <div id="content" role="tabpanel" class="tab-pane active row col-md-12">
     <div class="plan-content panel panel-default">
       <div class="panel-body <%= write_plan_class %> ">
         <%= yield :plan_tab_body %>
