refactor: removed select2 selector from research output tab

--- a/app/assets/stylesheets/dmpopidor/_plan.scss
+++ b/app/assets/stylesheets/dmpopidor/_plan.scss
@@ -275,6 +275,7 @@
           .edit,
           .readonly {
             flex: 3;
+            justify-content: space-between;
           }
 
           .action {
@@ -284,6 +285,12 @@
 
           &.form-group {
             flex-direction: column;
+          }
+          select {
+            width: 90%;
+          }
+          .contributor-link {
+            align-self: center;
           }
         }
 
