chore: cleaned unused code

--- a/app/views/branded/contributors/index.html.erb
+++ b/app/views/branded/contributors/index.html.erb
@@ -14,7 +14,7 @@
         </p>
       </div>
     <% end %>
-    <div class="col-md-12 madmp-fragment">
+    <div class="col-md-12">
       <dmp-contributors-tab props-json='{
         "locale": "<%= LocaleService.to_gettext(locale: locale) %>",
         "planId": "<%= @plan.id %>",
