--- a/app/views/branded/plans/_show_research_outputs.html.erb
+++ b/app/views/branded/plans/_show_research_outputs.html.erb
@@ -1,5 +1,5 @@
 <%# locals: { plan, research_outputs, research_output_types } %>
-<div id="research-outputs" class="madmp-fragment fragment-<%= plan.json_fragment.id%>">
+<div id="research-outputs" class="fragment-<%= plan.json_fragment.id%>">
   <h2><%= _('Research outputs') %></h2>
   <h3><%= _('Dataset, software, workflow, sample, protocol...') %></h3>
   <div class="display-readonly-textarea-content">
