--- a/app/views/branded/plans/budget.html.erb
+++ b/app/views/branded/plans/budget.html.erb
@@ -8,7 +8,7 @@
         <%= _("List of costs related to data management. Creating a cost is done in the \"Write Plan\" tab.") %>
       </p>
     </div>
-    <div class="col-md-12 madmp-fragment">
+    <div class="col-md-12">
       <table class="table table-hover list-contributor linked-fragments-list">
         <thead>
           <tr>
