Issue #3144 - clean up Changes in this PR: - replaced ‘visually-hidden-focusable’ class with ‘d-none’ - fixed two modals (create plan with link, change email address) - removed ‘legend-default’ class (no longer necessary) - fixed research outputs action dropdown styling - added padding for accordion sections draggable icon (fixed functionality)

--- a/app/views/contributors/_form.html.erb
+++ b/app/views/contributors/_form.html.erb
@@ -68,7 +68,7 @@ roles_tooltip = _("Select each role that applies to the contributor.")
 <div class="form-group mb-3 row">
   <div class="col-md-12">
     <fieldset>
-      <legend class="legend-default">
+      <legend>
         <span class="red">*</span> <%= _("Roles") %>
       </legend>
       <p><%= roles_tooltip.html_safe %></p>
