--- a/app/views/devise/registrations/_password_details.html.erb
+++ b/app/views/devise/registrations/_password_details.html.erb
@@ -21,9 +21,8 @@
 
   <div class="form-group mb-3 col-sm-8">
     <div class="checkbox">
-      <label>
-         <input type="checkbox" id="passwords_toggle" class="passwords_toggle" /><%= _('Show passwords') %>
-      </label>
+        <input type="checkbox" id="passwords_toggle" class="passwords_toggle" />
+        <%= label_tag('passwords_toggle', _('Show passwords'), class: 'form-check-label') %>
     </div>
   </div>
 
