--- a/app/views/layouts/_signin_signout.html.erb
+++ b/app/views/layouts/_signin_signout.html.erb
@@ -25,7 +25,7 @@
 <!-- Sign in / out -->
 <% if user_signed_in? %>
   <li class="dropdown nav-item" id="signin-signout">
-    <a href="#" class="dropdown-toggle nav-link" role="button" id="user-menu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <a href="#" class="dropdown-toggle nav-link" role="button" id="user-menu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
       <i class="fas fa-user" aria-hidden="true">&nbsp;</i>
       <%= current_user.name(false) %>
       <span class="caret"></span>
