--- a/app/views/devise/registrations/_password_confirmation.html.erb
+++ b/app/views/devise/registrations/_password_confirmation.html.erb
@@ -10,11 +10,11 @@
           <div class="form-group mb-3">
             <%= f.label :current_password, _('Password'), class: 'control-label', for: 'current_password' %>
             <%= f.password_field :current_password, class: 'form-control', id: 'current_password' %>
-            <%= f.password_field :password, class: 'hide' %>
+            <%= f.password_field :password, class: 'd-none' %>
           </div>
         </div>
 
-        <div id="org-change" class="hide">
+        <div id="org-change" class="d-none">
           <p>
             <%= _('Are you sure you want to change your organisational affiliation? Doing so will remove your administrative privileges.') %>
           </p>
@@ -32,9 +32,9 @@
 
       <div class="modal-footer">
         <button type="button" class="btn btn-default" id="pwd-cancel-confirmation"
-                data-dismiss="modal">Cancel</button>
+                data-bs-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary" id="pwd-confirmation"
-                data-dismiss="modal">Continue</button>
+                data-bs-dismiss="modal">Continue</button>
       </div>
     </div>
   </div>
