--- a/app/views/org_admin/conditions/_webhook_form.html.erb
+++ b/app/views/org_admin/conditions/_webhook_form.html.erb
@@ -4,7 +4,7 @@
     <div class="modal-content">
       <div class="modal-header text-center">
         <h4 class="modal-title w-100 font-weight-bold"><%= _('Send email') %></h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -34,11 +34,11 @@
         </div>
       </div>
       <div class="modal-footer d-flex justify-content-center">
-        <button class="btn btn-default discard" data-dismiss="modal"><%= _('Discard ') %><i class="fa-solid fa-trash-can"></i></button>
+        <button class="btn btn-default discard" data-bs-dismiss="modal"><%= _('Discard ') %><i class="fa-solid fa-trash-can"></i></button>
         <button class="btn btn-default" ><%= _('Save ') %><i class="fa-solid fa-paper-plane"></i></button>
       </div>
     </div>
   </div>
 </div>
 
-<a href="" class="pseudo-webhook-btn" data-toggle="modal" data-target="#<%= condition_no %>modalContactForm"></a>
+<a href="" class="pseudo-webhook-btn" data-bs-toggle="modal" data-bs-target="#<%= condition_no %>modalContactForm"></a>
