--- a/app/views/org_admin/sections/_section.html.erb
+++ b/app/views/org_admin/sections/_section.html.erb
@@ -13,7 +13,7 @@
       <%= section.title %>
     </a>
     <% if local_assigns[:draggable] %>
-      <i class="fas fa-arrows-alt" aria-hidden="true"
+      <i class="fas fa-arrows-alt px-3" aria-hidden="true"
          title="Drag to reposition">
       </i>
     <% end %>
