--- a/app/views/orgs/_profile_form.html.erb
+++ b/app/views/orgs/_profile_form.html.erb
@@ -139,7 +139,7 @@
   <div class="row">
     <% if current_user.can_super_admin? %>
       <fieldset class="col-sm-8">
-        <legend class="legend-default">
+        <legend>
           <%= _('Organisation Types') %>
             &nbsp; <a href="#" aria-label="<%= _('Text') %>" data-toggle="tooltip" data-placement="right" title="<%= org_types_tooltip %>">
             <i class="fas fa-circle-question fa-reverse" ></i>
