--- a/app/views/paginable/research_outputs/_index.html.erb
+++ b/app/views/paginable/research_outputs/_index.html.erb
@@ -49,11 +49,11 @@
               </button>
               <ul class="dropdown-menu" aria-labelledby="research_output-<%= output.id %>-actions">
                 <li><%= link_to _('Edit'),
-                        edit_plan_research_output_path(plan_id: @plan.id, id: output.id) %></li>
+                        edit_plan_research_output_path(plan_id: @plan.id, id: output.id), class: 'dropdown-item' %></li>
                 <li><%= link_to _('Remove'),
                                 plan_research_output_path(@plan.id, output),
                                 data: { confirm: _("You are about to delete '%{research_output_title}'. Are you sure?") % { research_output_title: output.title } },
-                                method: :delete %>
+                                method: :delete, class: 'dropdown-item' %>
                 </li>
               </ul>
             </div>
