--- a/react-client/src/components/forms.scss
+++ b/react-client/src/components/forms.scss
@@ -164,9 +164,15 @@ input[type="submit"] {
     }
 
     &:focus {
-      outline: none !important;
       border: 1px solid #000 !important;
       box-shadow: inset 0 0 0 0dvi !important;
+    }
+
+    &:focus {
+      outline-offset: 3px;
+      outline-color: #11057b;
+      outline-width: 1px;
+      outline-style: solid;
     }
 
     &:focus:invalid {
@@ -198,9 +204,15 @@ input[type="submit"] {
     }
 
     &:focus {
-      outline: none !important;
       border: 1px solid #000 !important;
       box-shadow: inset 0 0 0 0dvi !important;
+    }
+
+     &:focus {
+      outline-offset: 3px;
+      outline-color: #11057b;
+      outline-width: 1px;
+      outline-style: solid;
     }
 
     &:focus:invalid {
@@ -260,10 +272,18 @@ input[type="submit"] {
     &:hover {
       outline: none !important;
     }
-    &:focus-within,
-    &:focus {
+    &:focus-within{
       outline: 1px solid var(--dmpui-brand-blue-500) !important;
     }
+
+
+    &:focus {
+      outline-offset: 3px;
+      outline-color: #11057b;
+      outline-width: 1px;
+      outline-style: solid;
+    }
+
   }
 }
 
