add aria tags to live and project search

--- a/react-client/src/pages/plan/project-search/projectsearch.scss
+++ b/react-client/src/pages/plan/project-search/projectsearch.scss
@@ -1,5 +1,8 @@
 @import '../../../components/responsive';
 
+.project-list-header{
+  margin-top: 2rem!important;
+}
 .project-list {
 
   @include device(tablet) {
