--- a/react-client/src/pages/dashboard/dashboard.scss
+++ b/react-client/src/pages/dashboard/dashboard.scss
@@ -196,6 +196,17 @@
   width: 100%;
   height: 100%;
   z-index: 10;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 0px;
+  border-radius: 0rem;
+  box-shadow: none;
+  align-items: center;
+  border: none;
+  justify-content: center;
+  max-width:none;
   #filter-view,
   #quick-view-view {
     opacity: 1;
