ReactUI: Completed the related works section

--- a/react-client/src/pages/plan/related-works/relatedworks.scss
+++ b/react-client/src/pages/plan/related-works/relatedworks.scss
@@ -101,6 +101,11 @@
   .preview-button {
     margin-left: 8px;
   }
+
+}
+
+[data-colname="status"], .field-status p {
+  text-transform: capitalize;
 }
 
 abbr[title] {
