--- a/app/assets/stylesheets/dmpopidor/_buttons.scss
+++ b/app/assets/stylesheets/dmpopidor/_buttons.scss
@@ -17,7 +17,8 @@
     border-color: $blue;
     background-color: $blue;
     color: $white;
-    margin-bottom: 10px;
+    outline: none;
+    margin-top: 5px;
   }
 
   .btn-default,
@@ -28,9 +29,10 @@
   .btn-default:active:hover,
   .btn-default.active:hover {
     border-color: $blue;
-    background-color: $blue;
-    color: $white;
-    margin-bottom: 10px;
+    background-color: $white;
+    color: $blue;
+    outline: none;
+    margin-top: 5px;
   }
 
   .btn-secondary,
@@ -45,7 +47,6 @@
     color: $black;
     outline: none;
     margin-top: 5px;
-    margin-bottom: 10px;
   }
 
   .combobox-clear-button,
