chore: css adjustments on tables

--- a/app/assets/stylesheets/dmpopidor/_colours.scss
+++ b/app/assets/stylesheets/dmpopidor/_colours.scss
@@ -1,7 +1,7 @@
 $blue: #2c7dad;
 $dark-blue: #1c5170;
 $light-blue: #6ba4c5;
-$very-light-blue: #dcecf6;
+$very-light-blue: #c8e1f1;
 $very-very-light-blue: #edf5fa;
 $white: #fff;
 $black: #000;
